Upgrade to Dropwizard 4.0.x