@@ -11,24 +11,30 @@ import io.jitter.core.search.TopDocuments;
 import io.jitter.core.twittertools.api.TrecMicroblogAPIWrapper;
 import io.jitter.core.wikipedia.WikipediaManager;
 import io.jitter.core.wikipedia.WikipediaTopDocuments;
-import io.swagger.annotations.*;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.ws.rs.*;
+import jakarta.ws.rs.core.*;
 import org.apache.lucene.queryparser.classic.ParseException;
 import org.apache.thrift.TException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import javax.validation.constraints.NotEmpty;
-import javax.ws.rs.*;
-import javax.ws.rs.core.*;
 import java.io.IOException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Locale;
 import java.util.Optional;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicLong;
 
 @Path("/trec/wikipedia/fb")
-@Api(value = "/trec/wikipedia/fb", description = "TREC Feedback search endpoint")
+@Tag(name = "/trec/wikipedia/fb", description = "TREC Feedback search endpoint")
 @Produces(MediaType.APPLICATION_JSON + "; charset=utf-8")
 public class TrecWikipediaFeedbackResource extends AbstractFeedbackResource {
     private static final Logger logger = LoggerFactory.getLogger(TrecWikipediaFeedbackResource.class);
@@ -49,35 +55,34 @@ public class TrecWikipediaFeedbackResource extends AbstractFeedbackResource {
     @GET
     @Timed
     @CacheControl(maxAge = 1, maxAgeUnit = TimeUnit.HOURS)
-    @ApiOperation(
-            value = "Searches documents by keyword query using feedback",
-            notes = "Returns a search response",
-            response = SearchResponse.class
+    @Operation(
+            summary = "Searches documents by keyword query using feedback",
+            description = "Returns a search response"
     )
     @ApiResponses(value = {
-            @ApiResponse(code = 400, message = "Invalid query"),
-            @ApiResponse(code = 404, message = "No results found"),
-            @ApiResponse(code = 500, message = "Internal Server Error")
+            @ApiResponse(responseCode = "400", description = "Invalid query"),
+            @ApiResponse(responseCode = "404", description = "No results found"),
+            @ApiResponse(responseCode = "500", description = "Internal Server Error")
     })
-    public SearchResponse search(@ApiParam(value = "Search query", required = true) @QueryParam("q") @NotEmpty String q,
-                                 @ApiParam(hidden = true) @QueryParam("fq") Optional<String> fq,
-                                 @ApiParam(value = "Limit results", allowableValues="range[1, 10000]") @QueryParam("limit") @DefaultValue("1000") Integer limit,
-                                 @ApiParam(value = "Include retweets") @QueryParam("retweets") @DefaultValue("false") Boolean retweets,
-                                 @ApiParam(value = "Maximum document id") @QueryParam("maxId") Optional<Long> maxId,
-                                 @ApiParam(value = "Epoch filter") @QueryParam("epoch") Optional<String> epoch,
-                                 @ApiParam(value = "Limit feedback results", allowableValues="range[1, 10000]") @QueryParam("sLimit") @DefaultValue("1000") Integer sLimit,
-                                 @ApiParam(value = "Include retweets for feedback") @QueryParam("sRetweets") @DefaultValue("true") Boolean sRetweets,
-                                 @ApiParam(hidden = true) @QueryParam("sFuture") @DefaultValue("false") Boolean sFuture,
-                                 @ApiParam(value = "Number of feedback documents", allowableValues="range[1, 1000]") @QueryParam("fbDocs") @DefaultValue("50") Integer fbDocs,
-                                 @ApiParam(value = "Number of feedback terms", allowableValues="range[1, 1000]") @QueryParam("fbTerms") @DefaultValue("20") Integer fbTerms,
-                                 @ApiParam(value = "Original query weight", allowableValues="range[0, 1]") @QueryParam("fbWeight") @DefaultValue("0.5") Double fbWeight,
-                                 @ApiParam(hidden = true) @Context UriInfo uriInfo) {
+    public SearchResponse search(@Parameter(name = "Search query", required = true) @QueryParam("q") @NotBlank String q,
+                                 @Parameter(hidden = true) @QueryParam("fq") Optional<String> fq,
+                                 @Parameter(name = "Limit results", schema = @Schema(minimum = "1", maximum = "10000")) @QueryParam("limit") @DefaultValue("1000") Integer limit,
+                                 @Parameter(name = "Include retweets") @QueryParam("retweets") @DefaultValue("false") Boolean retweets,
+                                 @Parameter(name = "Maximum document id") @QueryParam("maxId") Optional<Long> maxId,
+                                 @Parameter(name = "Epoch filter") @QueryParam("epoch") Optional<String> epoch,
+                                 @Parameter(name = "Limit feedback results", schema = @Schema(minimum = "1", maximum = "10000")) @QueryParam("sLimit") @DefaultValue("1000") Integer sLimit,
+                                 @Parameter(name = "Include retweets for feedback") @QueryParam("sRetweets") @DefaultValue("true") Boolean sRetweets,
+                                 @Parameter(hidden = true) @QueryParam("sFuture") @DefaultValue("false") Boolean sFuture,
+                                 @Parameter(name = "Number of feedback documents", schema = @Schema(minimum = "1", maximum = "1000")) @QueryParam("fbDocs") @DefaultValue("50") Integer fbDocs,
+                                 @Parameter(name = "Number of feedback terms", schema = @Schema(minimum = "1", maximum = "1000")) @QueryParam("fbTerms") @DefaultValue("20") Integer fbTerms,
+                                 @Parameter(name = "Original query weight", schema = @Schema(minimum = "1", maximum = "1")) @QueryParam("fbWeight") @DefaultValue("0.5") Double fbWeight,
+                                 @Parameter(hidden = true) @Context UriInfo uriInfo) {
         MultivaluedMap<String, String> params = uriInfo.getQueryParameters();
 
         try {
             long startTime = System.currentTimeMillis();
-            String query = URLDecoder.decode(q, "UTF-8");
-            String filterQuery = URLDecoder.decode(fq.orElse(""), "UTF-8");
+            String query = URLDecoder.decode(q, StandardCharsets.UTF_8);
+            String filterQuery = URLDecoder.decode(fq.orElse(""), StandardCharsets.UTF_8);
 
             WikipediaTopDocuments selectResults = wikipediaManager.search(query, filterQuery, limit, true);
 
